syntax = "proto3";

package keyexchange;

option go_package = "/proto/protopb;protopb";

service KeyExchangeService {
rpc SendPublicKey(SendPublicKeyRequest) returns (SendPublicKeyResponse);
rpc ExchangeKeys (KeyExchangeRequest) returns (KeyExchangeResponse);
}

message ClientPublicKey{
    string client_id =1;
    string public_key=2;
}

message KeyExchangeRequest {
    string chat_id = 1;
}

message KeyExchangeResponse {
    repeated ClientPublicKey public_keys =1;
}

message SendPublicKeyRequest {
    string chat_id = 1;
    string client_id = 2;
    string public_key = 3; 
  }
  
  message SendPublicKeyResponse {
    bool success = 1;
    string error = 2;
  }